    minlevel = 0
    username_filter = ^[a-z][\w\-]{2-14}$
    password_filter = ^[[:graph:]]{3-15}$

[INFO]
  Added username and password syntax filter in config (username_filter and password_filter
    directives, see above). Filters are case insensivite PCRE RegEx.
  Note: theses filter need to protect at least against sql injection.
  accounts.* : built common code with gamseserver (Not put in common tinns lib atm
    because of DB access and log issues)
    
[GAME]
  Added charname and clanname (for future use) syntax filter in config/gameserver.conf :
    charname_filter = ^[a-z]+([\-\ ]?[a-z]+){0-2}$
    clanname_filter = ^[a-z][\w\-\ ]{2-14}$
  Filters are case insensivite PCRE RegEx.
  Note: theses filter need to protect at least against sql injection.

  sql.*, appartments.* : Moved Apt request methods from PMySQL to PAppartements

====================
Hammag; 27.10.2007 19:00 GMT+2
----------
[rev. 88 to 90]
<General changes>
  Items management

[GAME]
  Added container.cpp & container.h to implement classes used to manage all containers (including backpack, belt, armor, implant, processor, gogo, boxes, etc.)
  Implemented basic item moves between containers.
  Box content is randomly generated, and are not saved (you can use them to get rid of items)
  No partial quantity move/stacking management yet
  "take all" from boxes doesn't work yet (couldn't figure out yet how it works in detail)
  No item to/from ground yet, no trading yet, no item type recognition/pre-req/management for implants & armors yet

[LIBS]
  Netcode: a bug in packet decoding was revealed, which seem to somtime lead to (maybe) infinite loop. Not fixed yet.
  
====================
Hammag; 27.10.2007 19:00 GMT+2
----------
[rev. 91]

[GAME]
  Zoning issue fixed (a bug was leading to always load the same zone data for all zones with the same .bsp file, which is wrong)
  Improved random-filled boxes
  Excluded "temporary-items" from available item catalog (ItemsDef)